# soroban-fiddle

./: Cargo.toml  Makefile  README.md  index.html  index.scss  rust-toolchain.toml
.github/workflows/: deploy.yml
docs/: index-8d0d142557a5783e.css  index.html  soroban-fiddle-37f33ab1e0361ad3.js  soroban-fiddle-9e3e8d300e09fa02.js  soroban-fiddle-f822eb7028eb4c14.js
src/: invoke.rs  main.rs  stream.rs
src/horizon/: transaction.rs
src/horizonapi/: mod.rs  operations.rs
src/ui/: contract_info.rs  event_info.rs  history.rs  invoke.rs  invoke_info.rs  mod.rs
src/vm/: invoke.rs
