[package]
name = "sorolive-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen-futures = "0.4.33"
yew = "0.19.3"
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", rev = "e88f9fa7", features = ["serde", "base64", "next"] }
soroban-spec = { git = "https://github.com/stellar/rs-soroban-sdk" }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
reqwest = { version = "0.11", features = ["json"] }
sha256 = "1.1.1"
backoff = { version = "0.4.0", git = "https://github.com/leighmcculloch/ihrwein--backoff", branch = "glootimers", features = ["wasm-bindgen", "futures", "tokio", "gloo-timers"] }
gloo-timers = { version = "0.2.4", features = ["futures"] }
hex = "0.4.3"
base64 = "0.13.1"

soroban-env-host = { version = "0.0.9", features = ["vm", "serde"] }
